--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,13 @@
     border: 1px dashed;
 }
 
+.debug .title_benefit{
+    height: 100px;
+    width: 100%;
+    background-color: rgb(52, 68, 211);
+    border: 1px dashed;
+    margin-top: 2rem;
+}
 
 
 
