--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,8 @@
     margin-top: 2rem;
 }
 
-.debug .call_to_action .text_main_bottom{
+.debug .call_to_action .text_main_bottom, .debug .text_footer
+{
     height: 50px;
     background-color: antiquewhite;
 }
@@ -77,7 +78,6 @@
 
 
 /* #endregion Debug */
-
 
 
 /* #region Utilities */
@@ -108,6 +108,15 @@
 .justify_content_center{
     justify-content: center;
 }
+
+.text_main_bottom, .text_footer
+{
+    text-align: center;
+    margin: auto;
+    width: 50%;
+}
+
+
 
 
 
@@ -278,9 +287,6 @@
 /* #endregion @Media */
 
 
-
-
-
 /* #region Header */
 
 .logo
@@ -301,13 +307,6 @@
 /* #endregion Header */
 
 
-
-
-
-
-
-
-
 /* #region Main */
 
 .planning{
@@ -319,10 +318,8 @@
     flex-wrap: wrap;
 }
 
-.text_main_bottom{
-    text-align: center;
-    margin: auto;
-    width: 50%;
+.call_to_action{
+    background-color: var(--primary);
 }
 
 
@@ -334,5 +331,25 @@
 
 
 
+/* #endregion Main */
 
-/* #region Main */
+
+/* #region Footer */
+
+#site_footer{
+    background-color: var(--footer);
+    padding-top: 3rem;
+}
+
+
+
+
+
+
+/* #endregion Footer */
+
+
+
+
+
+
