--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,6 +147,10 @@ li{
     padding-left: 2rem;
 }
 
+.pt_1{
+    padding-top: 1rem;
+}
+
 .pt_2
 {
     padding-top: 2rem;
@@ -475,19 +479,46 @@ img.pt_2.phone {
     border-radius: 40px;
 }
 
-
-
-
-
-
-
-
-
-
-
 .testimonial{
     flex-wrap: wrap;
+    align-items: center;
+    background-color: var(--primary);
+    border-radius: 30px;
+    margin-top: 2rem;
+    padding: 1rem 0;
+
 }
+
+.expert_partners{
+    text-align: center;
+}
+
+.title_testimonials{
+    color: var(--primary);
+}
+
+.image_testimonial{
+    width: 200px;
+    height: 170px;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    margin: 0 1rem;
+
+}
+
+.bio{
+    padding-left: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
 
 .call_to_action{
     background-color: var(--primary);
