--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,9 +480,23 @@ img.pt_2.phone {
 .img_planning_2{
     margin-top: 8rem;
     background-color: var(--light);
-    padding-bottom: 2rem;
+    padding: 1rem;
     border-radius: 40px;
     margin-bottom: 4rem;
+    width: 85%;
+    text-align: center;
+}
+
+.image_planning_2{
+    
+    text-align: center;
+}
+
+.btn_app {
+    padding: 10px;
+    background-color: var(--primary);
+    border-radius: 50%;
+    color: var(--footer);
 }
 
 /* /section Planning */
